--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,9 +4,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.sunshine.app.DetailActivity$PlaceholderFragment">
+    tools:context="com.example.android.sunshine.app.DetailActivity.DetailFragment">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+        android:id="@+id/detail_text"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
